--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,15 +72,15 @@ android {
         exclude 'LICENSE.txt'
     }
 
-     signingConfigs {
-         // Uncomment and set values and then this will work
+    signingConfigs {
+        // Uncomment and set values and then this will work
 //         release {
 //             storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
 //             storePassword System.getenv('ANDROID_STORE_PASS')
 //             keyAlias System.getenv('ANDROID_KEY_ALIAS')
 //             keyPassword System.getenv('ANDROID_KEY_PASS')
 //         }
-     }
+    }
 
     lintOptions {
         abortOnError false
@@ -121,9 +121,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
 
-
     // View Injection
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    // Drawable stuff
+    compile 'me.panavtec:drawableview:0.6.0'
+
+    compile 'com.github.gcacace:signature-pad:1.1.0'
 
     // Logging
     compile 'com.jakewharton.timber:timber:3.0.2'
@@ -142,7 +146,6 @@ dependencies {
 
     // UI Libraries
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
-
 
     // Fabric/Crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
