--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,25 +2,21 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-rc1'
-        classpath 'io.fabric.tools:gradle:1.19.2'
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
 apply plugin: 'com.neenbedankt.android-apt'
 
 repositories {
     maven { url 'https://github.com/donnfelker/mvn-repo/raw/master/' }
     mavenLocal()
     jcenter()
-    maven { url 'https://maven.fabric.io/public' }
 }
 
 def computeVersionCode() {
@@ -107,10 +103,11 @@ android {
 dependencies {
 
     // Android Support Libs
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
 
-    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.code.gson:gson:2.4'
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
 
     // Dependency Injection
     compile 'com.google.dagger:dagger:2.0'
@@ -127,6 +124,26 @@ dependencies {
     // Drawable stuff
     compile 'me.panavtec:drawableview:0.6.0'
 
+    compile 'com.mikepenz:iconics-core:2.5.11@aar'
+
+    //Fonts
+
+    compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2' // (v1.0.0)
+
+//    compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
+//    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
+//    compile 'com.mikepenz:fontawesome-typeface:4.6.0.1@aar'
+//    compile 'com.mikepenz:octicons-typeface:3.2.0.1@aar'
+//    compile 'com.mikepenz:meteocons-typeface:1.1.0.1@aar'
+//    compile 'com.mikepenz:community-material-typeface:1.5.54.1@aar'
+//    compile 'com.mikepenz:weather-icons-typeface:2.0.10.1@aar'
+//    compile 'com.mikepenz:typeicons-typeface:2.0.7.1@aar'
+//    compile 'com.mikepenz:entypo-typeface:1.0.0.1@aar'
+//    compile 'com.mikepenz:devicon-typeface:2.0.0.1@aar'
+//    compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
+//    compile 'com.mikepenz:ionicons-typeface:2.0.1.1@aar'
+
+    //signing
     compile 'com.github.gcacace:signature-pad:1.1.0'
 
     // Logging
@@ -147,24 +164,13 @@ dependencies {
     // UI Libraries
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 
-    // Fabric/Crashlytics
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true
-    }
-
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.4'
     // Set this dependency to use JUnit 4 rules
     androidTestCompile 'com.android.support.test:rules:0.4'
     // Set this dependency to build and run Espresso tests
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
-    // Contrib
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
-        // http://stackoverflow.com/a/30931887/5210
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude module: 'recyclerview-v7'
-    }
+
     // Set this dependency to build and run UI Automator tests
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
