--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".BootstrapApplicationImpl"
@@ -68,6 +69,7 @@
         </activity>
 
         <activity android:name=".ui.NewsActivity" />
+        <activity android:name=".ui.ProfileActivity" />
         <activity android:name=".ui.UserActivity" android:label="@string/app_name" />
 
         <!-- Replace with your Fabric Crashlytics key from Fabric.io -->
