--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,12 @@ def computeVersionName() {
 }
 
 //noinspection GroovyUnusedAssignment
-def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
+//def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         minSdkVersion 18
