--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,32 +103,24 @@ android {
 dependencies {
 
     // Android Support Libs
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
 
-    compile 'com.google.code.gson:gson:2.4'
+
     androidTestCompile 'com.android.support:support-annotations:23.3.0'
 
     // Dependency Injection
-    compile 'com.google.dagger:dagger:2.0'
 
     // Volley for HTTP Requests
-    compile 'com.android.volley:volley:1.0.0'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
 
     // View Injection
-    compile 'com.jakewharton:butterknife:7.0.1'
 
     // Drawable stuff
-    compile 'me.panavtec:drawableview:0.6.0'
-
-    compile 'com.mikepenz:iconics-core:2.5.11@aar'
 
     //Fonts
 
-    compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2' // (v1.0.0)
+    // (v1.0.0)
 
 //    compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
 //    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
@@ -144,25 +136,16 @@ dependencies {
 //    compile 'com.mikepenz:ionicons-typeface:2.0.1.1@aar'
 
     //signing
-    compile 'com.github.gcacace:signature-pad:1.1.0'
 
     // Logging
-    compile 'com.jakewharton.timber:timber:3.0.2'
-
-    compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
-    compile 'com.nineoldandroids:library:2.4.0'
 
     // Event Bus
-    compile 'com.squareup:otto:1.3.5'
 
     // Image Loading
-    compile 'com.squareup.picasso:picasso:1.1.1'
 
     // HTTP
-    compile 'com.squareup.retrofit:retrofit:1.5.1'
 
     // UI Libraries
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.4'
@@ -178,4 +161,25 @@ dependencies {
 
     apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'javax.annotation:jsr250-api:1.0'
+
+
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.dagger:dagger:2.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'me.panavtec:drawableview:0.6.0'
+    compile 'com.mikepenz:iconics-core:2.5.11@aar'
+    compile 'com.joanzapata.iconify:android-iconify-simplelineicons:2.2.2'
+    compile 'com.github.gcacace:signature-pad:1.1.0'
+    compile 'com.jakewharton.timber:timber:3.0.2'
+    compile 'com.actionbarsherlock:viewpagerindicator:2.4.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.squareup:otto:1.3.5'
+    compile 'com.squareup.picasso:picasso:1.1.1'
+    compile 'com.squareup.retrofit:retrofit:1.5.1'
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
 }
