--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="org.mobi.bluemoon">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="org.mobi.bluemoon">
 
-    <uses-sdk
-        tools:overrideLibrary="android.support.test.uiautomator.v18"/>
+    <uses-sdk tools:overrideLibrary="android.support.test.uiautomator.v18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -12,12 +11,16 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".BootstrapApplicationImpl"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/Theme.Bootstrap.Dark">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".ui.MainActivity"
@@ -27,16 +30,16 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.BootstrapTimerActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:parentActivityName=".ui.MainActivity">
 
-        <activity android:name=".ui.BootstrapTimerActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:label="@string/app_name"
-                  android:launchMode="singleTop"
-                  android:parentActivityName="org.mobi.bluemoon.ui.MainActivity" >
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <!-- Both parent activity attributes have to contain the full package name -->
             <meta-data
@@ -44,11 +47,13 @@
                 android:value="org.mobi.bluemoon.ui.MainActivity" />
         </activity>
 
-        <service android:name=".core.TimerService" android:enabled="true" android:exported="false" />
-
+        <service
+            android:name=".core.TimerService"
+            android:enabled="true"
+            android:exported="false" />
         <service
             android:name=".authenticator.AccountAuthenticatorService"
-            android:process=":auth" >
+            android:process=":auth">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
@@ -60,22 +65,31 @@
 
         <activity
             android:name=".authenticator.BootstrapAuthenticatorActivity"
-            android:excludeFromRecents="true" >
+            android:excludeFromRecents="true">
 
             <!--
-                No intent-filter here! This activity is only ever launched by
-                someone who explicitly knows the class name
+                    No intent-filter here! This activity is only ever launched by
+                    someone who explicitly knows the class name
             -->
         </activity>
 
+        <!--
+                 The API key for Google Maps-based APIs is defined as a string resource.
+                 (See the file "res/values/google_maps_api.xml").
+                 Note that the API key is linked to the encryption key used to sign the APK.
+                 You need a different API key for each encryption key, including the release key that is used to
+                 sign the APK for publishing.
+                 You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAulUy-EhCZSBfzuK_GFUnkUB3AO-b-3wA" />
+
         <activity android:name=".ui.NewsActivity" />
         <activity android:name=".ui.ProfileActivity" />
-        <activity android:name=".ui.UserActivity" android:label="@string/app_name" />
-
-        <!-- Replace with your Fabric Crashlytics key from Fabric.io -->
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="ba313d812d151cc62ea06662ca2d9e2afd7e7a4b" />
+        <activity
+            android:name=".ui.UserActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
