--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         jcenter()
         mavenCentral()
         mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
@@ -17,6 +18,8 @@ repositories {
     maven { url 'https://github.com/donnfelker/mvn-repo/raw/master/' }
     mavenLocal()
     jcenter()
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 def computeVersionCode() {
@@ -105,7 +108,7 @@ dependencies {
     // Android Support Libs
 
 
-    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support:support-annotations:23.4.0'
 
     // Dependency Injection
 
@@ -163,9 +166,9 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
 
 
-    compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.dagger:dagger:2.0'
@@ -182,4 +185,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:1.1.1'
     compile 'com.squareup.retrofit:retrofit:1.5.1'
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
