--- a/app/build.gradle
+++ b/app/build.gradle
@@ -186,4 +186,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.5.1'
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-}
+    compile 'com.itextpdf:itextg:5.5.9'
+  }
