--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,6 +99,7 @@
             android:value="AIzaSyAulUy-EhCZSBfzuK_GFUnkUB3AO-b-3wA" />
 
         <activity android:name=".ui.ProfileActivity" />
+        <activity android:name=".ui.SymbolsActivity" />
         <activity
             android:name=".ui.UserActivity"
             android:label="@string/app_name" />
